# aws-sdk-rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  gen_docs.sh  rustfmt.toml
docs/: search-index.js
docs/aws_sdk_rust/: index.html  sidebar-items.js
docs/aws_sdk_rust/aws/: index.html  sidebar-items.js
docs/aws_sdk_rust/aws/common/: index.html  sidebar-items.js
docs/aws_sdk_rust/aws/common/common/: BodyParser.t.html  BodyWriter.t.html  Code.t.html  CodeParser.t.html  CodeWriter.t.html  ContinuationToken.t.html  ContinuationTokenParser.t.html  ContinuationTokenWriter.t.html  DisplayName.t.html  DisplayNameParser.t.html  DisplayNameWriter.t.html  EmailAddress.t.html  EmailAddressParser.t.html  EmailAddressWriter.t.html  HostId.t.html  HostIdParser.t.html  HostIdWriter.t.html  ID.t.html  IDParser.t.html  IDWriter.t.html  IsTruncated.t.html  IsTruncatedParser.t.html  IsTruncatedWriter.t.html  KeyCount.t.html  KeyCountParser.t.html  KeyCountWriter.t.html  MaxKeys.t.html  MaxKeysParser.t.html  MaxKeysWriter.t.html  OwnerParser.t.html  OwnerWriter.t.html  Quiet.t.html  QuietParser.t.html  QuietWriter.t.html  RequestIdParser.t.html  RequestIdWriter.t.html  Resource.t.html  ResourceParser.t.html  ResourceWriter.t.html  SkipElement.t.html  (+70 more)
docs/aws_sdk_rust/aws/common/credentials/: AutoRefreshingProvider.t.html  AutoRefreshingProviderSync.t.html  AwsCredentialsProvider.t.html  BaseAutoRefreshingProvider.t.html  DefaultCredentialsProvider.t.html  DefaultCredentialsProviderSync.t.html  IamProvider.t.html  ParametersProvider.t.html  index.html  sidebar-items.js  struct.AwsCredentials.html  struct.BaseAutoRefreshingProvider.html  struct.ChainProvider.html  struct.EnvironmentProvider.html  struct.IamProvider.html  struct.ParametersProvider.html  struct.ProfileProvider.html  trait.AwsCredentialsProvider.html  type.AutoRefreshingProvider.html  type.AutoRefreshingProviderSync.html  type.DefaultCredentialsProvider.html  type.DefaultCredentialsProviderSync.html
docs/aws_sdk_rust/aws/common/macros/: index.html
docs/aws_sdk_rust/aws/errors/: index.html  sidebar-items.js
docs/aws_sdk_rust/aws/s3/: index.html  sidebar-items.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Copy.js
docs/implementors/core/str/: trait.FromStr.js
docs/implementors/rustc_serialize/serialize/: trait.Decodable.js  trait.Encodable.js
docs/implementors/std/error/: trait.Error.js
docs/src/aws_sdk_rust/: lib.rs.html
docs/src/aws_sdk_rust/aws/: mod.rs.html
docs/src/aws_sdk_rust/http/: mod.rs.html
docs/src/aws_sdk_rust/src/: lib.rs.html
examples/: s3.rs
src/: lib.rs  main.rs
src/aws/: mod.rs
src/aws/common/: common.rs  credentials.rs  encode.rs  macros.rs  mod.rs  params.rs  region.rs  request.rs  signature.rs  xmlutil.rs
src/aws/errors/: aws.rs  credentials_error.rs  creds.rs  http.rs  mod.rs  s3.rs  s3_client_error.rs  s3_error.rs  xml.rs  xml_error.rs
src/aws/s3/: acl.rs  admin.rs  bucket.rs  bucket_notification.rs  endpoint.rs  grant.rs  header.rs  life_cycle.rs  mod.rs  object.rs  policy.rs  s3client.rs  writeparse.rs
src/http/: mod.rs
src/http/client/: error.rs  mod.rs  net.rs  proxy.rs
(+1783 files in other folders)
